--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,31 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[example]]
+name = "plex"
+path = "examples/plex.rs"
+required-features = ["plex"]
+
+[[example]]
+name = "jellyfin"
+path = "examples/jellyfin.rs"
+required-features = ["plex"]
+
+[[example]]
+name = "custom"
+path = "examples/custom_struct.rs"
+required-features = ["tnp", "title"]
+
+[features]
+tnp = ["torrent-name-parser", "titlecase"]
+title = ["titlecase"]
+plex = ["tnp"]
+jellyfin = ["torrent-name-parser", "titlecase"]
+
 [dependencies]
-titlecase = "1.1.0"
-torrent-name-parser = "0.10.0"
+titlecase = { version = "1.1.0", optional = true }
+torrent-name-parser = { version = "0.10.0", optional = true }
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
