Function series_directory_name
series_directory_name function changes
- add support for unmangle_title()
  - untangle_title() currently not implemented
- added series_directory_name_with_imdb_tag()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,5 @@ titlecase = { version = "1.1.0", optional = true }
 torrent-name-parser = "0.10.0"
 
 [package.metadata.docs.rs]
-all-features = true 
+features = ["plex"]
 rustdoc-args = ["--cfg", "docsrs"]
