--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,24 +10,11 @@ name = "plex"
 path = "examples/plex.rs"
 required-features = ["plex"]
 
-[[example]]
-name = "jellyfin"
-path = "examples/jellyfin.rs"
-required-features = ["jellyfin"]
-
-[[example]]
-name = "custom"
-path = "examples/custom_struct.rs"
-
 [features]
-title = ["titlecase"]
-plex = ["title"]
-jellyfin = ["title"]
 
 [dependencies]
-titlecase = { version = "1.1.0", optional = true }
-torrent-name-parser = "0.10.0"
+torrent-name-parser = "0.10.1"
 
 [package.metadata.docs.rs]
-features = ["plex"]
+features = ["all"]
 rustdoc-args = ["--cfg", "docsrs"]
